<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.ssafy.smartstore_jetpack.presentation.views.main.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_sheet"
        tools:context=".presentation.views.main.setting.AppThemeBottomSheetFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start_app_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top_app_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <TextView
            android:id="@+id/tv_title_app_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/eland_choice_b"
            android:text="@string/text_theme"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/gl_start_app_theme"
            app:layout_constraintTop_toBottomOf="@id/gl_top_app_theme" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_app_theme"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="@{() -> vm.onClickCloseTheme()}"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_app_theme"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/gl_end_app_theme"
            app:layout_constraintTop_toBottomOf="@id/gl_top_app_theme" />

        <TextView
            android:id="@+id/tv_primary_app_theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> vm.onClickPrimaryTheme()}"
            android:text="@string/text_theme_primary"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/gl_end_app_theme"
            app:layout_constraintStart_toEndOf="@id/gl_start_app_theme"
            app:layout_constraintTop_toBottomOf="@id/tv_title_app_theme" />

        <TextView
            android:id="@+id/tv_spring_app_theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> vm.onClickSpringTheme()}"
            android:text="@string/text_theme_spring"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/gl_end_app_theme"
            app:layout_constraintStart_toEndOf="@id/gl_start_app_theme"
            app:layout_constraintTop_toBottomOf="@id/tv_primary_app_theme" />

        <TextView
            android:id="@+id/tv_summer_app_theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> vm.onClickSummerTheme()}"
            android:text="@string/text_theme_summer"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/gl_end_app_theme"
            app:layout_constraintStart_toEndOf="@id/gl_start_app_theme"
            app:layout_constraintTop_toBottomOf="@id/tv_spring_app_theme" />

        <TextView
            android:id="@+id/tv_autumn_app_theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> vm.onClickAutumnTheme()}"
            android:text="@string/text_theme_autumn"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/gl_end_app_theme"
            app:layout_constraintStart_toEndOf="@id/gl_start_app_theme"
            app:layout_constraintTop_toBottomOf="@id/tv_summer_app_theme" />

        <TextView
            android:id="@+id/tv_winter_app_theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> vm.onClickWinterTheme()}"
            android:text="@string/text_theme_winter"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/gl_bottom_app_theme"
            app:layout_constraintEnd_toStartOf="@id/gl_end_app_theme"
            app:layout_constraintStart_toEndOf="@id/gl_start_app_theme"
            app:layout_constraintTop_toBottomOf="@id/tv_autumn_app_theme" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end_app_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom_app_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>